# grapher

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  index.html
.github/workflows/: main.yml  release.yml
public/wasm/: grapher.js  grapher_bg.wasm  grapher_bg.wasm.d.ts
src/: lib.rs  main.rs  web.rs
wasm/: LICENSE  README.md  grapher.d.ts  grapher.js  grapher_bg.wasm  grapher_bg.wasm.d.ts  package.json
