[package]
name = "grapher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
eframe = "0.17"
exmex = "0.15"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false